# fyp-rescue-robot

./: README.md
Arduino/: grap_task_2.ino
huanyu_robot_start/: CMakeLists.txt  creat_huanyu_udev.sh  package.xml
huanyu_robot_start/include/: Huanyu_robot.h
huanyu_robot_start/launch/: Huanyu_robot_start.launch  amcl_test.launch  gmapping_slam.launch  navigation_slam.launch
huanyu_robot_start/map/: map.pgm  map1.pgm  map1.yaml  map2.pgm  map2.yaml  small_map.pgm  small_map.yaml  test_map_1.pgm  test_map_1.yaml
huanyu_robot_start/param/: Huanyu_smoother.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
huanyu_robot_start/script/: show_mark.py
huanyu_robot_start/src/: Huanyu_robot.cpp
huanyubot_description/: CMakeLists.txt  package.xml
huanyubot_description/launch/: HuanyuBot_urdf.launch
huanyubot_description/urdf/: huanyubot.urdf
navigation-melodic/dwa_local_planner/src/: dwa_planner_ros.cpp
object_detect/: CMakeLists.txt  infomation.txt  package.xml
object_detect/launch/: arduino.launch
object_detect/src/: bar_control.py  go_to_center.py  vision.py
opencv_move/: CMakeLists.txt  package.xml
opencv_move/src/: color_tracking.py  opencv_move.py  orange_tracking.py
publisher/: CMakeLists.txt  package.xml
publisher/src/: publisher.cpp
robot_pose_ekf/test/: test_robot_pose_ekf.launch
turtlebot_teleop/launch/: keyboard_teleop.launch
turtlebot_teleop/scripts/: turtlebot_teleop_key
usb_cam/launch/: usb_cam-test.launch
